--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.10",
     "@babel/preset-typescript": "^7.12.7",
+    "@types/jest": "^26.0.16",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "@webpack-cli/serve": "^1.1.0",
@@ -33,7 +34,6 @@
     "husky": "^4.3.4",
     "jest": "^26.6.3",
     "jest-localstorage-mock": "^2.4.5",
-    "@types/jest": "^26.0.16",
     "lint-staged": "^10.5.3",
     "mini-css-extract-plugin": "^2.7.2",
     "prettier": "2.2.1",
@@ -60,6 +60,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "@types/react": "^18.0.28",
     "codecov": "^3.8.1",
     "core-js": "^3.8.1",
     "regenerator-runtime": "^0.13.7"
