--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "typescript": "^4.1.3",
     "webpack": "^5.10.0",
     "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "codecov": "^3.8.1"
   },
   "husky": {
     "hooks": {
@@ -61,7 +62,6 @@
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "@types/react": "^18.0.28",
-    "codecov": "^3.8.1",
     "core-js": "^3.8.1",
     "regenerator-runtime": "^0.13.7"
   }
